Add images and styles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link ref="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/3-col-portfolio.css>
+    <link rel="stylesheet" href="css/3-col-portfolio.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat" rel="stylesheet">   <title>Hanai design | tech</title>
 </head>
 <body>
@@ -43,28 +43,30 @@
   </nav>
 </header>
 <main class="container-fluid">
-  <section id="one" class="row hero">
-    <div class="col-md-12">
+  <section id="one" class="hero">
+    <div class="row">
+      <div class="col-md-12">
       <h2>FULLY RESPONSIVE, CUSTOM-DESIGNED WEBSITES</h2>
+      </div>
     </div>
     <div class="intro">
       <p class="intro-text">Hanai design | tech is dedicated to creating <span class="emphasis">smart</span>, <span class="emphasis">beautiful</span>, and <span class="emphasis">creative</span> websites<br>for small businesses. Below are a few services we provide:</p>
     </div>
   </section>
-  <section id="two" class="row">
+  <section id="two">
     <div class="row">
       <div class="col-md-4 portfolio-item">
         <a href="#">
-          <img class="img-responsive port-one" src="http://placehold.it/700x400" alt="">
+          <img class="img-responsive port-image" src="Images/ccmrs.jpg" alt="ccmrs">
         </a>
         <h3>
-          <a class="portfolio-heading" href="#">CCMRS</a>
+          <a class="portfolio-heading" href="#" id="bootstrap-overrides">CCMRS</a>
         </h3>
         <p class="portfolio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
       <div class="col-md-4 portfolio-item">
         <a href="#">
-          <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+          <img class="img-responsive port-image" src="Images/highview.jpg" alt="church">
         </a>
         <h3>
           <a class="portfolio-heading" href="#">Highview Bible Church</a>
@@ -73,10 +75,39 @@
       </div>
       <div class="col-md-4 portfolio-item">
         <a href="#">
-          <img class="img-responsive port-three" src="https://pailolo.com/uploads/Puna-Unlimited-Mixed-2015.jpg" alt="canoe">
+          <img class="img-responsive port-image" src="Images/kahana_canoe.jpg" alt="canoe">
         </a>
         <h3>
           <a class="portfolio-heading" href="#">Kahana Canoe Club</a>
+        </h3>
+        <p class="portfolio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 portfolio-item">
+        <a href="#">
+          <img class="img-responsive port-image" src="Images/rbc.jpg" alt="riverpark church">
+        </a>
+        <h3>
+          <a class="portfolio-heading" href="#">Riverpark Bible Church</a>
+        </h3>
+        <p class="portfolio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+      </div>
+      <div class="col-md-4 portfolio-item">
+        <a href="#">
+          <img class="img-responsive port-image" src="Images/freegrace.jpg" alt="free grace church">
+        </a>
+        <h3>
+          <a class="portfolio-heading" href="#">Free Grace Church</a>
+        </h3>
+        <p class="portfolio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+      </div>
+      <div class="col-md-4 portfolio-item">
+        <a href="#">
+          <img class="img-responsive port-image" src="Images/mauinow.jpg" alt="mauinow">
+        </a>
+        <h3>
+          <a class="portfolio-heading" href="#">MauiNow.com</a>
         </h3>
         <p class="portfolio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
