I changed the index file

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
       <div class="col-md-4 portfolio-item">
         <a href="#">
-          <img class="img-responsive port-image" src="Images/highview.jpg" alt="church">
+          <img class="img-responsive port-image" src="Images/highview.jpg" alt="highview church">
         </a>
         <h3>
           <a class="portfolio-heading" href="#">Highview Bible Church</a>
@@ -75,7 +75,7 @@
       </div>
       <div class="col-md-4 portfolio-item">
         <a href="#">
-          <img class="img-responsive port-image" src="Images/kahana_canoe.jpg" alt="canoe">
+          <img class="img-responsive port-image" src="Images/kahana_canoe.jpg" alt="kahana canoe">
         </a>
         <h3>
           <a class="portfolio-heading" href="#">Kahana Canoe Club</a>
