--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
       </button>
           <a class="navbar-brand" href="#">
-            <img class="nav-logo" src="Images/logo.png" alt="logo">
+            <img class="nav-logo" src="images/logo.png" alt="logo">
           </a>
       </div>
 
@@ -66,7 +66,7 @@
       </div>
       <div class="col-md-4 portfolio-item">
         <a href="#">
-          <img class="img-responsive port-image" src="Images/highview.jpg" alt="highview church">
+          <img class="img-responsive port-image" src="images/highview.jpg" alt="highview church">
         </a>
         <h3>
           <a class="portfolio-heading" href="#">Highview Bible Church</a>
