Made changes/cleaned up code

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
 <head>
     <link ref="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/3-col-portfolio.css">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat" rel="stylesheet">   <title>Hanai design | tech</title>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat" rel="stylesheet">   <title>Hanai </title>
 </head>
 <body>
 
@@ -29,12 +28,12 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><a class="smooth-scroll" href="#one">Home</a></li>
-          <li><a class="smooth-scroll" href="#two">Work</a></li>
-          <li><a class="smooth-scroll" href="#three">Services</a></li>
-          <li><a class="smooth-scroll" href="#four">About</a></li>
-          <li><a class="smooth-scroll" href="#five">Follow</a></li>
-          <li><a class="smooth-scroll" href="#six">Contact</a></li>
+          <li><a class="smooth-scroll" href="#hero">Home</a></li>
+          <li><a class="smooth-scroll" href="#work">Work</a></li>
+          <li><a class="smooth-scroll" href="#services">Services</a></li>
+          <li><a class="smooth-scroll" href="#about">About</a></li>
+          <li><a class="smooth-scroll" href="#follow">Follow</a></li>
+          <li><a class="smooth-scroll" href="#contact">Contact</a></li>
         </ul>
       </div>
       <!-- /.navbar-collapse -->
@@ -43,100 +42,85 @@
   </nav>
 </header>
 <main class="container-fluid">
-  <section id="one" class="hero">
-    <div class="row">
+  <section id="hero" class="row">
       <div class="col-md-12">
-      <h2>FULLY RESPONSIVE, CUSTOM-DESIGNED WEBSITES</h2>
+      <h3>FULLY RESPONSIVE, CUSTOM-DESIGNED WEBSITES</h3>
       </div>
-    </div>
     <div class="intro">
-      <p class="intro-text">Hanai design | tech is dedicated to creating <span class="emphasis">smart</span>, <span class="emphasis">beautiful</span>, and <span class="emphasis">creative</span> websites<br>for small businesses. Below are a few services we provide:</p>
+      <p class="intro-text">Hanai Web Design is dedicated to creating <span class="emphasis">smart</span>, <span class="emphasis">beautiful</span>, and <span class="emphasis">creative</span> websites<br>for small businesses. Below are a few of the companies we have worked with:</p>
     </div>
   </section>
-  <section id="two">
-    <div class="row">
-      <div class="col-md-4 portfolio-item">
-        <a href="#">
-          <img class="img-responsive port-image" src="Images/ccmrs.jpg" alt="ccmrs">
+  <section id="work" class="row">
+      <div class="col-md-4">
+        <a href="http://www.ccmrs.org">
+          <img class="img-responsive" src="images/ccmrs.jpg" alt="ccmrs">
         </a>
         <h3>
-          <a class="portfolio-heading" href="#" id="bootstrap-overrides">CCMRS</a>
+          <a href="http://www.ccmrs.org">CCMRS</a>
         </h3>
-        <p class="portfolio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
-      <div class="col-md-4 portfolio-item">
-        <a href="#">
-          <img class="img-responsive port-image" src="images/highview.jpg" alt="highview church">
+      <div class="col-md-4">
+        <a href="http://www.highviewbible.com">
+          <img class="img-responsive" src="images/highview.jpg" alt="highview church">
         </a>
         <h3>
-          <a class="portfolio-heading" href="#">Highview Bible Church</a>
+          <a href="http://www.highviewbible.com">Highview Bible Church</a>
         </h3>
-        <p class="portfolio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
-      <div class="col-md-4 portfolio-item">
+      <div class="col-md-4">
         <a href="#">
-          <img class="img-responsive port-image" src="Images/kahana_canoe.jpg" alt="kahana canoe">
+          <img class="img-responsive" src="images/kahana_canoe.jpg" alt="kahana canoe">
         </a>
         <h3>
-          <a class="portfolio-heading" href="#">Kahana Canoe Club</a>
+          <a href="#">Kahana Canoe Club</a>
         </h3>
-        <p class="portfolio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4 portfolio-item">
-        <a href="#">
-          <img class="img-responsive port-image" src="Images/rbc.jpg" alt="riverpark church">
-        </a>
-        <h3>
-          <a class="portfolio-heading" href="#">Riverpark Bible Church</a>
-        </h3>
-        <p class="portfolio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-      </div>
-      <div class="col-md-4 portfolio-item">
-        <a href="#">
-          <img class="img-responsive port-image" src="Images/freegrace.jpg" alt="free grace church">
-        </a>
-        <h3>
-          <a class="portfolio-heading" href="#">Free Grace Church</a>
-        </h3>
-        <p class="portfolio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-      </div>
-      <div class="col-md-4 portfolio-item">
-        <a href="#">
-          <img class="img-responsive port-image" src="Images/mauinow.jpg" alt="mauinow">
-        </a>
-        <h3>
-          <a class="portfolio-heading" href="#">MauiNow.com</a>
-        </h3>
-        <p class="portfolio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
     </div>
+      <div class="col-md-4">
+        <a href="http://www.riverpark.org">
+          <img class="img-responsive" src="images/rbc.jpg" alt="riverpark church">
+        </a>
+        <h3>
+          <a href="http://www.riverpark.org">Riverpark Bible Church</a>
+        </h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+      </div>
+      <div class="col-md-4">
+        <a href="http://www.freegracefresno.com">
+          <img class="img-responsive" src="images/freegrace.jpg" alt="free grace church">
+        </a>
+        <h3>
+          <a href="http://www.freegracefresno.com">Free Grace Church</a>
+        </h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+      </div>
+      <div class="col-md-4">
+        <a href="http://www.mauinow.com">
+          <img class="img-responsive" src="images/mauinow.jpg" alt="mauinow">
+        </a>
+        <h3>
+          <a href="http://www.mauinow.com">MauiNow.com</a>
+        </h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+      </div>
   </section>
-  <section id="three" class="row">
+  <section id="services" class="row">
   </section>
-  <section id="four" class="row">
+  <section id="about" class="row">
   </section>
-  <section id="five" class="row">
+  <section id="follow" class="row">
   </section>
-  <section id="six" class="row">
+  <section id="contact" class="row">
   </section>
 </main>
 <footer></footer>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
-  <script
-      src="https://code.jquery.com/jquery-3.2.1.min.js"
-      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-      crossorigin="anonymous">
-  </script>
   <script src="js/jquery.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-      crossorigin="anonymous">
-  </script>
-  <script src="js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="js/script.js">
+  <script src="js/bootstrap.js"></script>
 </body>
 </html>
