Complete NavBar, Hero, and Work sections

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 
+
+<!-- NavBar Section -->
   <header>
 
-<!-- copied from: https://getbootstrap.com/components/#navbar -->
   <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -24,8 +24,6 @@
             <img class="nav-logo" src="images/logo.png" alt="logo">
           </a>
       </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li><a class="smooth-scroll" href="#hero">Home</a></li>
@@ -36,12 +34,15 @@
           <li><a class="smooth-scroll" href="#contact">Contact</a></li>
         </ul>
       </div>
-      <!-- /.navbar-collapse -->
     </div>
-    <!-- /.container-fluid -->
   </nav>
 </header>
+<!-- End NavBar -->
+
+
 <main class="container-fluid">
+
+  <!-- Hero Section -->
   <section id="hero" class="row">
       <div class="col-md-12">
       <h3>FULLY RESPONSIVE, CUSTOM-DESIGNED WEBSITES</h3>
@@ -50,6 +51,9 @@
       <p class="intro-text">Hanai Web Design is dedicated to creating <span class="emphasis">smart</span>, <span class="emphasis">beautiful</span>, and <span class="emphasis">creative</span> websites<br>for small businesses. Below are a few of the companies we have worked with:</p>
     </div>
   </section>
+  <!-- End Hero Section -->
+
+  <!-- Work Section -->
   <section id="work" class="row">
       <div class="col-md-4">
         <a href="http://www.ccmrs.org">
@@ -107,14 +111,26 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
   </section>
+  <!-- End Work Section -->
+
+  <!-- Services Section -->
   <section id="services" class="row">
   </section>
+  <!-- End Services Section -->
+
+  <!-- About/Follow Section -->
   <section id="about" class="row">
   </section>
   <section id="follow" class="row">
   </section>
+  <!-- End About/Follow Section -->
+
+  <!-- Contact Section -->
   <section id="contact" class="row">
   </section>
+  <!-- End Contact Section -->
+
+
 </main>
 <footer></footer>
 
