Add Services section

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <link ref="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat" rel="stylesheet">   <title>Hanai </title>
 </head>
@@ -56,20 +57,20 @@
   <!-- Work Section -->
   <section id="work" class="row">
       <div class="col-md-4">
-        <a href="http://www.ccmrs.org">
+        <a href="http://www.ccmrs.org" target="_blank">
           <img class="img-responsive" src="images/ccmrs.jpg" alt="ccmrs">
         </a>
         <h3>
-          <a href="http://www.ccmrs.org">CCMRS</a>
+          <a href="http://www.ccmrs.org" target="_blank">CCMRS</a>
         </h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
       <div class="col-md-4">
-        <a href="http://www.highviewbible.com">
+        <a href="http://www.highviewbible.com" target="_blank">
           <img class="img-responsive" src="images/highview.jpg" alt="highview church">
         </a>
         <h3>
-          <a href="http://www.highviewbible.com">Highview Bible Church</a>
+          <a href="http://www.highviewbible.com" target="_blank">Highview Bible Church</a>
         </h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
@@ -84,29 +85,29 @@
       </div>
     </div>
       <div class="col-md-4">
-        <a href="http://www.riverpark.org">
+        <a href="http://www.riverpark.org" target="_blank">
           <img class="img-responsive" src="images/rbc.jpg" alt="riverpark church">
         </a>
         <h3>
-          <a href="http://www.riverpark.org">Riverpark Bible Church</a>
+          <a href="http://www.riverpark.org" target="_blank">Riverpark Bible Church</a>
         </h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
       <div class="col-md-4">
-        <a href="http://www.freegracefresno.com">
+        <a href="http://www.freegracefresno.com" target="_blank">
           <img class="img-responsive" src="images/freegrace.jpg" alt="free grace church">
         </a>
         <h3>
-          <a href="http://www.freegracefresno.com">Free Grace Church</a>
+          <a href="http://www.freegracefresno.com" target="_blank">Free Grace Church</a>
         </h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
       <div class="col-md-4">
-        <a href="http://www.mauinow.com">
+        <a href="http://www.mauinow.com" target="_blank">
           <img class="img-responsive" src="images/mauinow.jpg" alt="mauinow">
         </a>
         <h3>
-          <a href="http://www.mauinow.com">MauiNow.com</a>
+          <a href="http://www.mauinow.com" target="_blank">MauiNow.com</a>
         </h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
@@ -115,6 +116,57 @@
 
   <!-- Services Section -->
   <section id="services" class="row">
+        <div class="col-md-3 col-sm-6">
+            <div class="serviceBox">
+                <div class="service-icon">
+                    <span><i class="fa fa-globe"></i></span>
+                </div>
+                <div class="service-content">
+                    <h3 class="title">Web Design</h3>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in volutpat elit. Class aptent taciti.</p>
+                    <a href="#" class="read-more fa fa-plus"></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-3 col-sm-6">
+            <div class="serviceBox green">
+                <div class="service-icon">
+                    <span><i class="fa fa-rocket"></i></span>
+                </div>
+                <div class="service-content">
+                    <h3 class="title">Web Development</h3>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in volutpat elit. Class aptent taciti.</p>
+                    <a href="#" class="read-more fa fa-plus"></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-3 col-sm-6">
+            <div class="serviceBox green">
+                <div class="service-icon">
+                    <span><i class="fa fa-briefcase"></i></span>
+                </div>
+                <div class="service-content">
+                    <h3 class="title">Brand Building</h3>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in volutpat elit. Class aptent taciti.</p>
+                    <a href="#" class="read-more fa fa-plus"></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-3 col-sm-6">
+            <div class="serviceBox green">
+                <div class="service-icon">
+                    <span><i class="fa fa-mobile"></i></span>
+                </div>
+                <div class="service-content">
+                    <h3 class="title">Responsive Design</h3>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in volutpat elit. Class aptent taciti.</p>
+                    <a href="#" class="read-more fa fa-plus"></a>
+                </div>
+            </div>
+        </div>
   </section>
   <!-- End Services Section -->
 
