Added About and Follow sections

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <!-- Work Section -->
   <section id="work" class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-6">
         <a href="http://www.ccmrs.org" target="_blank">
           <img class="img-responsive" src="images/ccmrs.jpg" alt="ccmrs">
         </a>
@@ -65,7 +65,7 @@
         </h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-6">
         <a href="http://www.highviewbible.com" target="_blank">
           <img class="img-responsive" src="images/highview.jpg" alt="highview church">
         </a>
@@ -74,7 +74,7 @@
         </h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-6">
         <a href="#">
           <img class="img-responsive" src="images/kahana_canoe.jpg" alt="kahana canoe">
         </a>
@@ -84,7 +84,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
     </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-6">
         <a href="http://www.riverpark.org" target="_blank">
           <img class="img-responsive" src="images/rbc.jpg" alt="riverpark church">
         </a>
@@ -93,7 +93,7 @@
         </h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-6">
         <a href="http://www.freegracefresno.com" target="_blank">
           <img class="img-responsive" src="images/freegrace.jpg" alt="free grace church">
         </a>
@@ -102,7 +102,7 @@
         </h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-6">
         <a href="http://www.mauinow.com" target="_blank">
           <img class="img-responsive" src="images/mauinow.jpg" alt="mauinow">
         </a>
@@ -171,14 +171,40 @@
   <!-- End Services Section -->
 
   <!-- About/Follow Section -->
-  <section id="about" class="row">
-  </section>
-  <section id="follow" class="row">
+  <section id="about" class="row halfbox-section">
+		<div class="col-md-6 halfbox-left">
+		    <div class="site-title">
+		        <h3>Hi, I'm Brian!</h3>
+		    </div>
+
+			<p>Integer eu dui quis purus mattis maximus. Nunc bibendum dignissim libero, at placerat lectus fringilla nec. Morbi ut risus sed nulla elementum ultrices venenatis sit amet nisl.</p>
+		</div>
+		<div class="col-md-6 video" id="video">
+		</div>
+
+	<div class="clearfix"></div>
+	</div>
+
+
+<div class="halfbox-section">
+		<div class="col-md-6 video2" id="video">
+		</div>
+	</div>
+	    <div class="col-md-6 halfbox-left">
+          <i class="fa fa-facebook-square" aria-hidden="true"></i>
+          <i class="fa fa-github" aria-hidden="true"></i>
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+          <i class="fa fa-twitter-square" aria-hidden="true"></i>
+		</div>
+
+	<div class="clearfix"></div>
+	</div>
   </section>
   <!-- End About/Follow Section -->
 
   <!-- Contact Section -->
   <section id="contact" class="row">
+
   </section>
   <!-- End Contact Section -->
 
